common/force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Represents a single payment that is either paid/waiting for payment. This record will contain all the required information to create a payment with the Monoova API. This record will also store/keep track of the payment status and any other response information from Monoova&apos;s API. The payment object will have 2 record types Investment Payment , Subscription Payment to represent the two different types of payments the system accepts.</description>
    <label>Payment</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>