common/force-app/main/default/objects/Payment__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <description>The actual amount received from the payment.</description>
    <inlineHelpText>Enter the amount that has been successfully received. This might be different from the Payment Amount if there were partial payments or adjustments.</inlineHelpText>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>