common/force-app/main/default/objects/Payment__c/fields/Cooling_Off_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Off_Period_End_Date__c</fullName>
    <label>Cooling Off Period End Date</label>
    <type>Date</type>
</CustomField>