common/force-app/main/default/objects/Payment__c/fields/DDRSA_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>DDRSA_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Direct Debit Request Service Agreement has been accepted by the user</description>
    <inlineHelpText>Use this to indicate if the Direct Debit Request Service Agreement has been accepted by the user</inlineHelpText>
    <label>DDRSA Acceptance</label>
    <type>Checkbox</type>
</CustomField>