common/force-app/main/default/objects/Payment__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>A text-based identifier used for external systems to reference this payment record.</description>
    <externalId>true</externalId>
    <inlineHelpText>Use this field to store any external reference ID that might be associated with this payment from external systems or processes.</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>