common/force-app/main/default/objects/Payment__c/fields/Investing_As__c.field-meta.xml
<CustomField>
    <fullName>Investing_As__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the account that the user has invested as.</description>
    <inlineHelpText>Use this to indicate the account that the user has invested as.</inlineHelpText>
    <label>Investing As</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Investing As)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>