common/force-app/main/default/objects/Payment__c/fields/Location_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Funds__c</fullName>
    <description>Indicates where the funds are currently located or held.</description>
    <inlineHelpText>Select the appropriate option to indicate the current location of the payment funds.</inlineHelpText>
    <label>Location of Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Received</fullName>
                <default>true</default>
                <label>Not Received</label>
            </value>
            <value>
                <fullName>Monoova</fullName>
            </value>
            <value>
                <fullName>VCN Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>