common/force-app/main/default/objects/Payment__c/fields/Monoova_BPay__c.field-meta.xml
<CustomField>
    <fullName>Monoova_BPay__c</fullName>
    <label>Monoova BPay CRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>