common/force-app/main/default/objects/Payment__c/fields/Monoova_BPay_Biller_Name__c.field-meta.xml
<CustomField>
    <fullName>Monoova_BPay_Biller_Name__c</fullName>
    <label>Monoova BPay Biller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>