common/force-app/main/default/objects/Payment__c/fields/Monoova_BPay_Validation_Response__c.field-meta.xml
<CustomField>
    <fullName>Monoova_BPay_Validation_Response__c</fullName>
    <label>Monoova BPay Validation Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>