common/force-app/main/default/objects/Payment__c/fields/Monoova_BPay_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Monoova_BPay_Validation_Status__c</fullName>
    <label>Monoova BPay Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>