common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_amount__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_amount__c</fullName>
    <description>The unique id the client will use to refer to the persisted token for future payments. The value must be unique for this combination of client.</description>
    <inlineHelpText>The unique id the client will use to refer to the persisted token for future payments. The value must be unique for this combination of client.</inlineHelpText>
    <label>Monoova Card amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>