common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_API_Response__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_API_Response__c</fullName>
    <label>Monoova Card API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>