common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_clientPaymentTokenUniqueRef__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_clientPaymentTokenUniqueRef__c</fullName>
    <description>The unique id the client will use to refer to the persisted token for future payments. The value must be unique for this combination of client.</description>
    <inlineHelpText>The unique id the client will use to refer to the persisted token for future payments. The value must be unique for this combination of client.</inlineHelpText>
    <label>Monoova Card clientPaymentTokenUniqueRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>