common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_customerId__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_customerId__c</fullName>
    <description>Client’s customer Id as provided by client when the session was created.</description>
    <inlineHelpText>Client’s customer Id as provided by client when the session was created.</inlineHelpText>
    <label>Monoova Card customerId</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>