common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_description__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_description__c</fullName>
    <description>Payment description. This will be saved in Monoova&apos;s system but will not be passed to the issuer.</description>
    <inlineHelpText>Payment description. This will be saved in Monoova&apos;s system but will not be passed to the issuer.</inlineHelpText>
    <label>Monoova Card description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>