common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_payloadId__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_payloadId__c</fullName>
    <description>Response from the Primer Checkout</description>
    <inlineHelpText>Response from the Primer Checkout</inlineHelpText>
    <label>Monoova Card payloadId</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>