common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_refundStatus__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_refundStatus__c</fullName>
    <description>Only defined for payments which have a refund requested.</description>
    <inlineHelpText>Only defined for payments which have a refund requested.</inlineHelpText>
    <label>Monoova Card refundStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>