common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_Settlement__c</fullName>
    <description>Time of final settlement by Monoova of the transaction as ISO 8601 dateTime with UTC timezone</description>
    <inlineHelpText>Time of final settlement by Monoova of the transaction as ISO 8601 dateTime with UTC timezone</inlineHelpText>
    <label>Monoova Card Settlement</label>
    <type>DateTime</type>
</CustomField>