common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_settlementBatchId__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_settlementBatchId__c</fullName>
    <description>Batch Id of settlement file for the payment</description>
    <inlineHelpText>Batch Id of settlement file for the payment</inlineHelpText>
    <label>Monoova Card settlementBatchId</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>