common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_status__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_status__c</fullName>
    <description>Payment transaction status</description>
    <inlineHelpText>Payment transaction status</inlineHelpText>
    <label>Monoova Card status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>