common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_traceId__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_traceId__c</fullName>
    <description>TraceID used by Monoova</description>
    <inlineHelpText>TraceID used by Monoova</inlineHelpText>
    <label>Monoova Card traceId</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>