common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_TransactionID__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_TransactionID__c</fullName>
    <description>Monoova transaction Id. Only available after settlement.</description>
    <inlineHelpText>Monoova transaction Id. Only available after settlement.</inlineHelpText>
    <label>Monoova Card TransactionID</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>