common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_transactionType__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_transactionType__c</fullName>
    <description>Can be either one of the following options:

Payment
Refund
Chargeback</description>
    <inlineHelpText>Can be either one of the following options:

Payment
Refund
Chargeback</inlineHelpText>
    <label>Monoova Card transactionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>