common/force-app/main/default/objects/Payment__c/fields/Monoova_Card_type__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Card_type__c</fullName>
    <description>Card Type. Must be one of Visa, Mastercard. Case insensitive.</description>
    <inlineHelpText>Card Type. Must be one of Visa, Mastercard. Case insensitive.</inlineHelpText>
    <label>Monoova Card type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>