common/force-app/main/default/objects/Payment__c/fields/Monoova_clientTransactionUniqueReference__c.field-meta.xml
<CustomField>
    <fullName>Monoova_clientTransactionUniqueReference__c</fullName>
    <description>Id will be used to uniquely identify each payment request made by our customer.</description>
    <inlineHelpText>Id will be used to uniquely identify each payment request made by our customer.</inlineHelpText>
    <label>Monoova clientTransactionUniqueReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>