common/force-app/main/default/objects/Payment__c/fields/Monoova_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Completed_Date__c</fullName>
    <description>This is the date when the transaction was Completed.</description>
    <inlineHelpText>This is the date when the transaction was Completed.</inlineHelpText>
    <label>Monoova Completed Date</label>
    <type>Date</type>
</CustomField>