common/force-app/main/default/objects/Payment__c/fields/Monoova_description__c.field-meta.xml
<CustomField>
    <fullName>Monoova_description__c</fullName>
    <description>Description for the transaction</description>
    <inlineHelpText>Description for the transaction</inlineHelpText>
    <label>Monoova description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>