common/force-app/main/default/objects/Payment__c/fields/Monoova_expectedClearanceDateForFunds__c.field-meta.xml
<CustomField>
    <fullName>Monoova_expectedClearanceDateForFunds__c</fullName>
    <description>expected clearance date for funds if applicable.</description>
    <inlineHelpText>expected clearance date for funds if applicable.</inlineHelpText>
    <label>Monoova expectedClearanceDateForFunds</label>
    <type>Date</type>
</CustomField>