common/force-app/main/default/objects/Payment__c/fields/Monoova_feeAmountExcludingGst__c.field-meta.xml
<CustomField>
    <fullName>Monoova_feeAmountExcludingGst__c</fullName>
    <description>This is the fee amount excluding GST</description>
    <inlineHelpText>This is the fee amount excluding GST</inlineHelpText>
    <label>Monoova feeAmountExcludingGst</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>