common/force-app/main/default/objects/Payment__c/fields/Monoova_feeAmountGstComponent__c.field-meta.xml
<CustomField>
    <fullName>Monoova_feeAmountGstComponent__c</fullName>
    <description>This is the GST Component of the fee amount that has been debited from your mAccount</description>
    <inlineHelpText>This is the GST Component of the fee amount that has been debited from your mAccount</inlineHelpText>
    <label>Monoova feeAmountGstComponent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>