common/force-app/main/default/objects/Payment__c/fields/Monoova_fundsClearedDate__c.field-meta.xml
<CustomField>
    <fullName>Monoova_fundsClearedDate__c</fullName>
    <description>clearance date for funds if applicable. &quot;yyyy-MM-dd&quot; format.</description>
    <inlineHelpText>clearance date for funds if applicable. &quot;yyyy-MM-dd&quot; format.</inlineHelpText>
    <label>Monoova fundsClearedDate</label>
    <type>Date</type>
</CustomField>