common/force-app/main/default/objects/Payment__c/fields/Monoova_lodgement_reference__c.field-meta.xml
<CustomField>
    <fullName>Monoova_lodgement_reference__c</fullName>
    <description>Reference will appear on payees statement.</description>
    <inlineHelpText>Reference will appear on payees statement.</inlineHelpText>
    <label>Monoova lodgement reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>