common/force-app/main/default/objects/Payment__c/fields/Monoova_PayID_Name__c.field-meta.xml
<CustomField>
    <fullName>Monoova_PayID_Name__c</fullName>
    <description>Name of the PayID that the user is paying to (response from Monoovas validation)</description>
    <label>Monoova PayID Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>