common/force-app/main/default/objects/Payment__c/fields/Monoova_PayID_Response__c.field-meta.xml
<CustomField>
    <fullName>Monoova_PayID_Response__c</fullName>
    <label>Monoova PayID Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>