common/force-app/main/default/objects/Payment__c/fields/Monoova_PayID_Status__c.field-meta.xml
<CustomField>
    <fullName>Monoova_PayID_Status__c</fullName>
    <description>The PayID status at the time of payment confirmation</description>
    <inlineHelpText>The PayID status at the time of payment confirmation</inlineHelpText>
    <label>Monoova PayID Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>