common/force-app/main/default/objects/Payment__c/fields/Monoova_Refund_Response__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Refund_Response__c</fullName>
    <description>API Response from processing a refund</description>
    <label>Monoova Refund Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>