common/force-app/main/default/objects/Payment__c/fields/Monoova_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Monoova_Status_Description__c</fullName>
    <description>This is a plain English description of the status.</description>
    <inlineHelpText>This is a plain English description of the status.</inlineHelpText>
    <label>Monoova Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>