common/force-app/main/default/objects/Payment__c/fields/Monoova_transaction_duration__c.field-meta.xml
<CustomField>
    <fullName>Monoova_transaction_duration__c</fullName>
    <description>This value represents the total time in milliseconds that the Platform took to process the request.</description>
    <inlineHelpText>This value represents the total time in milliseconds that the Platform took to process the request.</inlineHelpText>
    <label>Monoova transaction duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>