common/force-app/main/default/objects/Payment__c/fields/Monoova_transactionId__c.field-meta.xml
<CustomField>
    <fullName>Monoova_transactionId__c</fullName>
    <description>This is the Platform ID that is unique to your payment request. 0 will be returned if any errors occurred.</description>
    <inlineHelpText>This is the Platform ID that is unique to your payment request. 0 will be returned if any errors occurred.</inlineHelpText>
    <label>Monoova transactionId</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>