common/force-app/main/default/objects/Payment__c/fields/Monoova_transactionStatus__c.field-meta.xml
<CustomField>
    <fullName>Monoova_transactionStatus__c</fullName>
    <description>The transaction has not yet been dishonoured if the transactionStatus is &apos;Complete&apos;.   The transaction is dishonoured when the transactionStatus is set to &apos;Dishonoured&apos; and the dishonouredDate has a value.</description>
    <inlineHelpText>Expect one of the following: &quot;Complete&quot; &quot;Pending&quot; &quot;Rejected&quot; &quot;Dishonoured&quot; &quot;WaitingOnClearedFunds&quot;</inlineHelpText>
    <label>Monoova transactionStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>