common/force-app/main/default/objects/Payment__c/fields/Monoova_uniqueReference__c.field-meta.xml
<CustomField>
    <fullName>Monoova_uniqueReference__c</fullName>
    <description>This is a unique reference generated by the calling service. This is a nonce. Its use is to determine if a request has already been received by the Engine. We strongly recommend sending a uniqueReference in your execution call to avoid duplicate transactions.</description>
    <inlineHelpText>The unique payment reference generated by VC</inlineHelpText>
    <label>Monoova uniqueReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>