common/force-app/main/default/objects/Payment__c/fields/PayID_Unique_Reference__c.field-meta.xml
<CustomField>
    <fullName>PayID_Unique_Reference__c</fullName>
    <description>The Reference number shown to the customer for PayID</description>
    <label>PayID Unique Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>