common/force-app/main/default/objects/Payment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>The total amount due or paid for the payment record.</description>
    <inlineHelpText>Enter the exact amount that was charged or is due for this payment.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>