common/force-app/main/default/objects/Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>The date and time when the payment was processed.</description>
    <inlineHelpText>Record the exact date and time when the payment was made or received.</inlineHelpText>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>