common/force-app/main/default/objects/Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>The method used for the payment transaction.</description>
    <inlineHelpText>Choose the payment method used for this transaction from the available options.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>PayID</fullName>
            </value>
            <value>
                <fullName>BPay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>