common/force-app/main/default/objects/Payment__c/fields/Refund_Payment__c.field-meta.xml
<CustomField>
    <fullName>Refund_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to a refund payment record, used specifically for refunds processed for Card &amp; Direct Debit payments.</description>
    <inlineHelpText>Use this field to link the payment to its corresponding refund record if a refund was issued.</inlineHelpText>
    <label>Refund Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>