common/force-app/main/default/objects/Payment__c/fields/Refund_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Process_Date__c</fullName>
    <description>Date/Time that the refund was processed by Monoova</description>
    <label>Refund Process Date</label>
    <type>DateTime</type>
</CustomField>