common/force-app/main/default/objects/Payment__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <description>Reason that the refund was requested</description>
    <label>Refund Reason</label>
    <type>TextArea</type>
</CustomField>