common/force-app/main/default/objects/Payment__c/fields/Refund_Requested__c.field-meta.xml
<CustomField>
    <fullName>Refund_Requested__c</fullName>
    <description>Date/Time that the refund was requested</description>
    <label>Refund Requested</label>
    <type>DateTime</type>
</CustomField>