common/force-app/main/default/objects/Payment__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the related account, indicating the account to which the payment is associated.</description>
    <inlineHelpText>Use this lookup to link the payment with the corresponding account.</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>