common/force-app/main/default/objects/Payment__c/fields/Related_Investment__c.field-meta.xml
<CustomField>
    <fullName>Related_Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the related investment record, indicating that this payment is associated with a particular investment.</description>
    <inlineHelpText>Use this lookup field to associate the payment with a specific investment record.</inlineHelpText>
    <label>Related Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>