common/force-app/main/default/objects/Payment__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the related opportunity record, associating the payment with a specific sales opportunity.</description>
    <inlineHelpText>This field should be used to connect the payment to the relevant opportunity.</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>