common/force-app/main/default/objects/Payment__c/fields/Related_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the related opportunity line item, indicating the specific product or service line in an opportunity associated with this payment.</description>
    <inlineHelpText>This lookup field allows you to connect the payment to a specific line item within an opportunity.</inlineHelpText>
    <label>Related Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>