common/force-app/main/default/objects/Payment__c/fields/Related_Payment_Token__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment_Token__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the payment token record, which may be used for recurring payments or future transactions.</description>
    <inlineHelpText>Associate this payment with the appropriate payment token if applicable.</inlineHelpText>
    <label>Related Payment Token</label>
    <referenceTo>Payment_Token__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>