common/force-app/main/default/objects/Payment__c/recordTypes/Default_Payment.recordType-meta.xml
<RecordType>
    <fullName>Default_Payment</fullName>
    <active>true</active>
    <description>The default payment record type</description>
    <label>Default Payment</label>
</RecordType>