common/force-app/main/default/objects/Payment__c/recordTypes/Investment_Payment.recordType-meta.xml
<RecordType>
    <fullName>Investment_Payment</fullName>
    <active>true</active>
    <description>The investment payment record type</description>
    <label>Investment Payment</label>
</RecordType>