common/force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Investing_As__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Related_Investment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>